# z9-nef-wine-fits

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: troubleshooting.md  wine-adobe-setup.md
examples/: quickstart.sh
examples/sample-data/: README.md
tests/: smoke-test.sh  test-cli.sh
